--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,8 +1,8 @@
--   id: javascript
-    descr: javascript    
+-   id: reptwriting
+    descr: report writing 
     xp: 6
--   id: css
-    descr: css
+-   id: docs
+    descr: documentation
     color: teal
     xp: 7
 -   id: c#
